Pet cards rendering on dashboard, carousel rendering on homepage, bugs squashed in calendar rendering on my events and in add an event and add a specialist

--- a/static/css/petplanner.css
+++ b/static/css/petplanner.css
@@ -186,3 +186,10 @@ input {
     width: 100%;
     bottom: 0;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 3fr;
+    grid-gap: 20px;
+    align-items: center;
+}
